Ensure that statuspanel doesn't overflow and expand the browser window.

--- a/skin/base.css
+++ b/skin/base.css
@@ -3,6 +3,7 @@
 /* Ensure the statuspanel doesn't overlap with the tabs toolbar */
 statuspanel {
     position: relative !important;
+    display: block;
 }
 
 /* Style the scrollbox for vertical arrangements. */
@@ -29,19 +30,18 @@ statuspanel {
     visibility: collapse;
 }
 
-
 /* No special treatment for app tabs (for now). */
 .tabbrowser-tab[pinned] {
-  position: inherit;
+    position: inherit;
 }
 .tabbrowser-tab[pinned] > .tab-text {
-  display: inherit;
+    display: inherit;
 }
 
 /* Ensure the twisty image doesn't stretch. */
 .verticaltabs-twisty-container {
-	-moz-box-pack: start;
-	-moz-box-align: center;
+    -moz-box-pack: start;
+    -moz-box-align: center;
 }
 
 /* Collapse/expand animation */
